--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,42 @@
 <resources>
     <string name="app_name">ShakeDetector</string>
+
+    <string name="toolbarTitle">Shake me</string>
+
+    <string-array name="answers">
+        <item>It is certain</item>
+        <item>It is decidedly so</item>
+        <item>Without a doubt</item>
+        <item>Yes — definitely</item>
+        <item>You may rely on it</item>
+        <item>As I see it, yes</item>
+        <item>Most likely</item>
+        <item>Outlook good</item>
+        <item>Signs point to yes</item>
+        <item>Yes </item>
+        <item>Reply hazy, try again</item>
+        <item>Ask again later</item>
+        <item>Better not tell you now</item>
+        <item>Cannot predict now</item>
+        <item>Concentrate and ask again</item>
+        <item>Don\’t count on it</item>
+        <item>My reply is no</item>
+        <item>My sources say no</item>
+        <item>Outlook not so good</item>
+        <item>Very doubtful</item>
+        <item>Ask your mother</item>
+        <item>ERROR 888: Answer not found.</item>
+        <item>Gee, wash your hands</item>
+        <item>I just wasted 10 seconds of your life</item>
+        <item>I\'m Batmaaaan</item>
+        <item>You wanna cigarette, kid?</item>
+        <item>Stop shaking me, moron!</item>
+        <item>Shut up you're drunk</item>
+        <item>Clean me and I'll answer</item>
+        <item>You have a therapist for this</item>
+        <item>Stop asking who let the dogs out already!</item>
+        <item>Hey, no one said I knew everything.</item>
+        <item>Don't count on it</item>
+        <item>How would you like it if I shook YOU for a change???!!</item>
+    </string-array>
 </resources>
