--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,12 +31,12 @@
         <item>I\'m Batmaaaan</item>
         <item>You wanna cigarette, kid?</item>
         <item>Stop shaking me, moron!</item>
-        <item>Shut up you're drunk</item>
-        <item>Clean me and I'll answer</item>
+        <item>Shut up you\'re drunk</item>
+        <item>Clean me and I\'ll answer</item>
         <item>You have a therapist for this</item>
         <item>Stop asking who let the dogs out already!</item>
         <item>Hey, no one said I knew everything.</item>
-        <item>Don't count on it</item>
+        <item>Don\'t count on it</item>
         <item>How would you like it if I shook YOU for a change???!!</item>
     </string-array>
 </resources>
